# doctemplates

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users_sessions.py  0002_document_types.py  0003_content_templates.py  0004_static_pdf_assets.py  0005_document_designs.py  0006_document_design_versioning.py  0007_document_issuances.py  0008_document_tracelogs.py  0009_document_metadata.py  0010_mock_data.py  0011_template_css.py  0012_storage_decoupling.py  0013_async_issuance_jobs.py  0014_template_ai_proposals.py  0015_xlsx_generation.py
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/api/: __init__.py  ai_models.py  content_templates.py  document_designs.py  document_types.py  health.py  issuances.py  static_pdfs.py  template_ai_proposals.py  xlsx_templates.py
backend/app/auth/: dependencies.py  jwks.py  oidc.py  routes.py  session_service.py  user_service.py
backend/app/models/: __init__.py  content_template.py  document_design.py  document_issuance.py  document_tracelog.py  document_type.py  session.py  static_pdf_asset.py  template_ai_proposal.py  (+2 more)
backend/tests/: conftest.py  test_ai_model_catalog.py  test_async_generation_jobs.py  test_auth_callback.py  test_auth_gating.py  test_bearer_auth.py  test_content_templates.py  test_document_designs.py  test_document_tracelogs.py  test_document_types.py  test_generation_preview.py  test_issuance_library_api.py  test_nested_case_insensitive.py  test_pdf_generator.py  test_s3_xlsx_storage_config.py  test_session_service.py  test_smoke.py  test_static_pdf_assets.py  test_storage_providers.py  test_template_ai_proposals.py  test_template_ast_validation.py  test_xlsx_analysis.py  test_xlsx_designs.py  test_xlsx_format_contract.py  test_xlsx_issuance_generation.py  test_xlsx_preview.py  test_xlsx_renderer.py  test_xlsx_templates_api.py
bff/: .dockerignore  Dockerfile  pyproject.toml
bff/app/: __init__.py  config.py  main.py
bff/tests/: conftest.py  test_auth.py  test_proxy.py
(+408 files in other folders)
