[project]
name = "docmanagement-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "authlib>=1.7.2",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.1.0",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
    "xhtml2pdf>=0.2.16",
    "jinja2>=3.1.5",
    "boto3>=1.43.46",
    "celery[redis]>=5.6.3",
]

[dependency-groups]
dev = [
    "cryptography>=49.0.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
