[project]
name = "docmanagement-bff"
version = "0.1.0"
description = "Backend for Frontend (BFF) Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
    "httpx>=0.28.1",
    "cryptography>=49.0.0",
    "pyjwt[crypto]>=2.13.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
